--- a/projectpandas.ipynb
+++ b/projectpandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM4QdQDycO76K4eXUfw0ZIS",
+      "authorship_tag": "ABX9TyMYEYCBonHrY2pYH0RQYSBL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -691,57 +691,426 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# add space to first and surname\n",
+        "project['author'] = project['author'].str.split(r'(?=[A-Z])').str.join(' ')"
+      ],
       "metadata": {
         "id": "nNjjd3Qc5V_e"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# now test it out to see that it's worked\n",
+        "project['author']"
+      ],
       "metadata": {
-        "id": "N9JJx2km5WBq"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N9JJx2km5WBq",
+        "outputId": "04a236d5-06d6-445f-956e-18f8505201f1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0         Geronimo Stilton\n",
+              "1             Rick Riordan\n",
+              "2              Jeff Kinney\n",
+              "3             Rick Riordan\n",
+              "4             Rick Riordan\n",
+              "               ...        \n",
+              "87484        Chris Stewart\n",
+              "87485      Stephen O' Shea\n",
+              "87486           Mark Twain\n",
+              "87487      Laurence Sterne\n",
+              "87488       Mark Kurlansky\n",
+              "Name: author, Length: 87489, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# show narrator column\n",
+        "project['narrator']"
+      ],
       "metadata": {
-        "id": "fNrgLSHN5WFt"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fNrgLSHN5WFt",
+        "outputId": "8fa07e2e-9c85-4393-ba39-7228f48a201c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0            Narratedby:BillLobely\n",
+              "1         Narratedby:RobbieDaymond\n",
+              "2            Narratedby:DanRussell\n",
+              "3        Narratedby:SoneelaNankani\n",
+              "4        Narratedby:JesseBernstein\n",
+              "                   ...            \n",
+              "87484      Narratedby:ChrisStewart\n",
+              "87485        Narratedby:RobertFass\n",
+              "87486         Narratedby:FloGibson\n",
+              "87487       Narratedby:AntonLesser\n",
+              "87488       Narratedby:FleetCooper\n",
+              "Name: narrator, Length: 87489, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# clean narrator column as I did the author column\n",
+        "\n",
+        "project['narrator'] = project['narrator'].str.replace('Narratedby:', '')\n",
+        "\n",
+        "project['narrator'] = project['narrator'].str.split(r'(?=[A-Z])').str.join(' ')\n",
+        "\n"
+      ],
       "metadata": {
         "id": "co_zH7775WIO"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# test output after previous steps\n",
+        "project['narrator']"
+      ],
       "metadata": {
-        "id": "m7p2bO6u5WKR"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m7p2bO6u5WKR",
+        "outputId": "4f5332bf-8087-4c20-e05a-7c236b05adb4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0             Bill Lobely\n",
+              "1          Robbie Daymond\n",
+              "2             Dan Russell\n",
+              "3         Soneela Nankani\n",
+              "4         Jesse Bernstein\n",
+              "               ...       \n",
+              "87484       Chris Stewart\n",
+              "87485         Robert Fass\n",
+              "87486          Flo Gibson\n",
+              "87487        Anton Lesser\n",
+              "87488        Fleet Cooper\n",
+              "Name: narrator, Length: 87489, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "project = project"
+      ],
       "metadata": {
-        "id": "K-1wCsAR5WNy"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 250
+        },
+        "id": "K-1wCsAR5WNy",
+        "outputId": "3598b3a5-65b3-4677-ac36-6b96b61330d2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                                         name               author  \\\n",
+              "0                  Geronimo Stilton #11 & #12    Geronimo  Stilton   \n",
+              "1                            The Burning Maze        Rick  Riordan   \n",
+              "2                                The Deep End         Jeff  Kinney   \n",
+              "3                        Daughter of the Deep        Rick  Riordan   \n",
+              "4  The Lightning Thief: Percy Jackson, Book 1        Rick  Riordan   \n",
+              "\n",
+              "           narrator                time releasedate language  \\\n",
+              "0       Bill Lobely   2 hrs and 20 mins    04-08-08  English   \n",
+              "1    Robbie Daymond   13 hrs and 8 mins    01-05-18  English   \n",
+              "2       Dan Russell    2 hrs and 3 mins    06-11-20  English   \n",
+              "3   Soneela Nankani  11 hrs and 16 mins    05-10-21  English   \n",
+              "4   Jesse Bernstein              10 hrs    13-01-10  English   \n",
+              "\n",
+              "                           stars   price  \n",
+              "0     5 out of 5 stars34 ratings  468.00  \n",
+              "1   4.5 out of 5 stars41 ratings  820.00  \n",
+              "2   4.5 out of 5 stars38 ratings  410.00  \n",
+              "3   4.5 out of 5 stars12 ratings  615.00  \n",
+              "4  4.5 out of 5 stars181 ratings  820.00  "
+            ],
+            "text/html": [
+              "\n",
+              "\n",
+              "  <div id=\"df-ba131b25-4e1d-493d-aec1-e8ef1913dd07\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>name</th>\n",
+              "      <th>author</th>\n",
+              "      <th>narrator</th>\n",
+              "      <th>time</th>\n",
+              "      <th>releasedate</th>\n",
+              "      <th>language</th>\n",
+              "      <th>stars</th>\n",
+              "      <th>price</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Geronimo Stilton #11 &amp; #12</td>\n",
+              "      <td>Geronimo  Stilton</td>\n",
+              "      <td>Bill Lobely</td>\n",
+              "      <td>2 hrs and 20 mins</td>\n",
+              "      <td>04-08-08</td>\n",
+              "      <td>English</td>\n",
+              "      <td>5 out of 5 stars34 ratings</td>\n",
+              "      <td>468.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>The Burning Maze</td>\n",
+              "      <td>Rick  Riordan</td>\n",
+              "      <td>Robbie Daymond</td>\n",
+              "      <td>13 hrs and 8 mins</td>\n",
+              "      <td>01-05-18</td>\n",
+              "      <td>English</td>\n",
+              "      <td>4.5 out of 5 stars41 ratings</td>\n",
+              "      <td>820.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>The Deep End</td>\n",
+              "      <td>Jeff  Kinney</td>\n",
+              "      <td>Dan Russell</td>\n",
+              "      <td>2 hrs and 3 mins</td>\n",
+              "      <td>06-11-20</td>\n",
+              "      <td>English</td>\n",
+              "      <td>4.5 out of 5 stars38 ratings</td>\n",
+              "      <td>410.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Daughter of the Deep</td>\n",
+              "      <td>Rick  Riordan</td>\n",
+              "      <td>Soneela Nankani</td>\n",
+              "      <td>11 hrs and 16 mins</td>\n",
+              "      <td>05-10-21</td>\n",
+              "      <td>English</td>\n",
+              "      <td>4.5 out of 5 stars12 ratings</td>\n",
+              "      <td>615.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>The Lightning Thief: Percy Jackson, Book 1</td>\n",
+              "      <td>Rick  Riordan</td>\n",
+              "      <td>Jesse Bernstein</td>\n",
+              "      <td>10 hrs</td>\n",
+              "      <td>13-01-10</td>\n",
+              "      <td>English</td>\n",
+              "      <td>4.5 out of 5 stars181 ratings</td>\n",
+              "      <td>820.00</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ba131b25-4e1d-493d-aec1-e8ef1913dd07')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "\n",
+              "\n",
+              "\n",
+              "    <div id=\"df-7843a37d-d4eb-4cec-8c93-da420f35a53d\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7843a37d-d4eb-4cec-8c93-da420f35a53d')\"\n",
+              "              title=\"Suggest charts.\"\n",
+              "              style=\"display:none;\">\n",
+              "\n",
+              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "     width=\"24px\">\n",
+              "    <g>\n",
+              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
+              "    </g>\n",
+              "</svg>\n",
+              "      </button>\n",
+              "    </div>\n",
+              "\n",
+              "<style>\n",
+              "  .colab-df-quickchart {\n",
+              "    background-color: #E8F0FE;\n",
+              "    border: none;\n",
+              "    border-radius: 50%;\n",
+              "    cursor: pointer;\n",
+              "    display: none;\n",
+              "    fill: #1967D2;\n",
+              "    height: 32px;\n",
+              "    padding: 0 0 0 0;\n",
+              "    width: 32px;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart:hover {\n",
+              "    background-color: #E2EBFA;\n",
+              "    box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "    fill: #174EA6;\n",
+              "  }\n",
+              "\n",
+              "  [theme=dark] .colab-df-quickchart {\n",
+              "    background-color: #3B4455;\n",
+              "    fill: #D2E3FC;\n",
+              "  }\n",
+              "\n",
+              "  [theme=dark] .colab-df-quickchart:hover {\n",
+              "    background-color: #434B5C;\n",
+              "    box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "    filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "    fill: #FFFFFF;\n",
+              "  }\n",
+              "</style>\n",
+              "\n",
+              "    <script>\n",
+              "      async function quickchart(key) {\n",
+              "        const containerElement = document.querySelector('#' + key);\n",
+              "        const charts = await google.colab.kernel.invokeFunction(\n",
+              "            'suggestCharts', [key], {});\n",
+              "      }\n",
+              "    </script>\n",
+              "\n",
+              "      <script>\n",
+              "\n",
+              "function displayQuickchartButton(domScope) {\n",
+              "  let quickchartButtonEl =\n",
+              "    domScope.querySelector('#df-7843a37d-d4eb-4cec-8c93-da420f35a53d button.colab-df-quickchart');\n",
+              "  quickchartButtonEl.style.display =\n",
+              "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "}\n",
+              "\n",
+              "        displayQuickchartButton(document);\n",
+              "      </script>\n",
+              "      <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-ba131b25-4e1d-493d-aec1-e8ef1913dd07 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-ba131b25-4e1d-493d-aec1-e8ef1913dd07');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     }
   ]
 }
