--- a/python101.ipynb
+++ b/python101.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHAK1HcNRWcJec0HtceZEa",
+      "authorship_tag": "ABX9TyO0n6zxPHcf8fSf4TCpaMnO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -249,30 +249,119 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# looking at conditionals --- if, elif, else, and\n",
+        "\n",
+        "score = int(input(\"Score \"))\n",
+        "\n",
+        "if 90 <= score and score <= 100:\n",
+        "  print(\"Grade: A\")\n",
+        "elif 80 <= score and score < 90:\n",
+        "  print (\"Grade: B\")\n",
+        "elif 70 <= score and score < 80:\n",
+        "  print (\"Grade: C\")\n",
+        "elif score >= 60 and score < 70:\n",
+        "  print (\"Grade: D\")\n",
+        "else:\n",
+        "  print(\"Grade: F\")"
+      ],
       "metadata": {
-        "id": "SDSROKV9LdPm"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SDSROKV9LdPm",
+        "outputId": "0592ca7c-867d-4e66-846e-5fd45b307cfa"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Score 78\n",
+            "Grade: C \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# even better, the above code could be improved like so\n",
+        "\n",
+        "score = int(input(\"Score \"))\n",
+        "\n",
+        "if score >= 90:\n",
+        "  print(\"Grade: A\")\n",
+        "\n",
+        "elif score >= 80:\n",
+        "  print(\"Grade: B\")\n",
+        "\n",
+        "elif score >= 70:\n",
+        "  print(\"Grade: C\")\n",
+        "\n",
+        "elif score >= 60:\n",
+        "  print(\"Grade: D\")\n",
+        "\n",
+        "else:\n",
+        "  print(\"Grade: F\")"
+      ],
       "metadata": {
-        "id": "zCQpBjQILdSI"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zCQpBjQILdSI",
+        "outputId": "512a0f97-4421-49cc-c645-ec432a324969"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Score 88\n",
+            "Grade: B\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# working with boolean values and showing use of % sign\n",
+        "def real ():\n",
+        "  x = int(input(\"What's x? \"))\n",
+        "  if is_even(x):\n",
+        "    print(\"Even\")\n",
+        "  else:\n",
+        "    print(\"Odd\")\n",
+        "\n",
+        "def is_even(n):\n",
+        "  if n % 2 == 0:\n",
+        "    return True\n",
+        "  else:\n",
+        "    return False\n",
+        "\n",
+        "real()\n"
+      ],
       "metadata": {
-        "id": "FLB5foPlLdUU"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FLB5foPlLdUU",
+        "outputId": "55c1e4b1-947c-4998-fb9e-c8e0ffcbc389"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What's x? 11\n",
+            "Odd\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
